# esp32-s3_development

./: CMakeLists.txt
main/: CMakeLists.txt  main.c
main/inc/: global.h
main/src/: global.c  main.c
tools/mqtt/: esp_mqtt.c  esp_mqtt.h
tools/ring_buffer/: ring_buf.h
tools/wifi/: wifi.c  wifi.h
user/tools/: CMakeLists.txt
user/tools/cjson/src/: cJSON.c
user/tools/communication/inc/: communication.h
user/tools/communication/src/: communication.c
user/tools/freertos_extra/inc/: freertos_extra.h
user/tools/freertos_extra/src/: freertos_extra.c
user/tools/hashmap/inc/: hashmap.h
user/tools/hashmap/src/: hashmap.c
user/tools/json_proto/inc/: json_proto.h
user/tools/json_proto/src/: json_proto.c
user/tools/motor/inc/: motor.h
user/tools/motor/src/: motor.c
user/tools/mqtt_comm/inc/: mqtt_comm.h
user/tools/mqtt_comm/src/: mqtt_comm.c
user/tools/my_wifi/inc/: my_wifi.h
user/tools/my_wifi/src/: my_wifi.c
user/tools/proto/inc/: proto.h
user/tools/proto/src/: proto.c
user/tools/ring_buf/: CMakeLists.txt
user/tools/ring_buf/inc/: ring_buf.h
user/tools/ring_buf/src/: ring_buf.c
user/tools/router/inc/: router.h
user/tools/router/src/: router.c
user/tools/serial/: CMakeLists.txt
user/tools/serial/inc/: serial.h
user/tools/serial/src/: serial.c
user/tools/serial_comm/inc/: serial_comm.h
user/tools/serial_comm/src/: serial_comm.c
user/tools/serial_proto/inc/: serial_proto.h
user/tools/serial_proto/src/: serial_proto.c
user/tools/task_que/inc/: task_que.h
user/tools/task_que/src/: task_que.c
(+39 files in other folders)
